# android-videos-server

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml  jni.h
app/src/main/assets/: books.html  dialog.js  index.css  index.html  index.js  pages.html  shared.js  subtitle.html  video.html
app/src/main/assets/img/: 新建文本文档.cmd
app/src/main/java/euphoria/psycho/filemanager/: FileService.java  MainActivity.java  SearchActivity.java  Utils.java
app/src/main/jni/: CMakeLists.txt  Converter.cpp  Converter.h  Utils.h  native-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
